# Pay-plugin-example

./: AGENTS.md
.agent/rules/: backend-rule.md
.agent/skills/code-review/: SKILL.md
.agent/skills/code-review/scripts/: locations.py  run.py  static_check.py
.agent/workflows/: build.md  db-reset.md  pre-commit.md  test-checklist.md
.codex/skills/code-review/scripts/: arch_check.py  run_tests.py
.codex/workflows/: orm-gen.md  start.md  stop.md  test.md
PayBackend/: CMakeLists.txt  build.bat  conanfile.txt  config.json  init_pay.sql  main.cc  run_server.bat
PayBackend/controllers/: MetricsController.cc  MetricsController.h  PayController.cc  PayController.h  PayMetricsController.cc  PayMetricsController.h  WechatCallbackController.cc
PayBackend/docs/: pay-api-examples.md  payment-design.md
PayBackend/filters/: PayAuthFilter.cc  PayAuthFilter.h  PayAuthMetrics.cc  PayAuthMetrics.h
PayBackend/models/: PayCallback.cc  PayIdempotency.cc  PayIdempotency.h  PayLedger.cc  PayOrder.cc  PayOrder.h  PayPayment.cc  PayPayment.h  PayRefund.cc  PayRefund.h  README.md
PayBackend/plugins/: PayPlugin.cc  PayPlugin.h  WechatPayClient.cc  WechatPayClient.h
PayBackend/scripts/: generate_models.bat
PayBackend/test/: CMakeLists.txt  ControllerMetricsTest.cc  CreatePaymentIntegrationTest.cc  IdempotencyIntegrationTest.cc  PayAuthFilterTest.cc  PayAuthMetricsTest.cc  PayUtilsTest.cc  QueryOrderTest.cc  ReconcileSummaryTest.cc  RefundQueryTest.cc  WechatCallbackIntegrationTest.cc  WechatPayClientTest.cc  test_main.cc
PayBackend/utils/: PayUtils.cc  PayUtils.h
